06-09-2019
 - Fixed issue #1 (Double entries conflict).
 - Fixed bug where capcode description starting with number got interpreted as int.
 - Utilized Twitter hook and assigned special cases
 - Introduced dedicated area for processing a mnessage so the workflow can be defined.
 - Removed "Hide Pygame hello message".

04-09-2019
 - Added Twitter hook

03-09-2019
 - Fixed leaving radio running on crash
 - Program will now terminate other claiming threads when needed

02-09-2019
 - Added realtime capcode resolving from central database
 - Split some code up to multiple files
 - Replaced old regex prio patterns with new ones
 - Added getPrio()
 - Monitor now uses getPrio()
 - Added discipline identifiers to the monitor

01-09-2019
 - Fixed monitor taking up 100% CPU (oops)
 - Changed colors in documentation
 - Added capcode & Word filter to trigger alarms

30-08-2019
 - Added serial controller to turn on a strobe light when an alert is received

28-08-2019
 - Fixed uploading the wrong file...
 - Changed folder structure
 - Added documentation

26-08-2019
 - Added logging of raw messages and unique messages
 - Added ascii art header file
 - Added shortcut scripts for infrastructure
 - Minor logic fixes and changes
 - Added MySQL connector

23-08-2019
 - Fixed speaker speed
 - Added quick debug speaker to custom need
 - Added 2 quick ways to save data to a log file

18-08-2019
 - Added text to speach (TTS) controller

08-08-2019
 - Minor changes to the monitor script
 - Introduction of the filter script (will replace parts of the code in monitor.py)
 - Preparations for planned features including logging, caching and saving.

01-08-2019
 - Renamed p2000.py > monitor.py
 - Added config files (Rename config_default.json to config.json for proper usage)
 - Created web connector to send the messages to the server
 - Removed error log file code entirely

31-07-2019
 - Initial creation / adaptation of original code